--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "TZ=UTC vitest",
-    "test:unit": "TZ=UTC vitest --mode unit",
-    "test:integration": "TZ=UTC vitest --mode integration"
+    "test": "vitest",
+    "test:unit": "vitest --mode unit",
+    "test:integration": "vitest --mode integration"
   },
   "dependencies": {
     "react": "^18.2.0",
